finish two section

--- a/index.html
+++ b/index.html
@@ -1,12 +1,214 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hot Gadgets</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Hot Gadgets</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+  <!-- Start With Navbar -->
+  <!-- Start With Navbar -->
+
+  <div class="container">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <div class="nav-image">
+          <a class="navbar-brand" href="#">
+            <img src="images/logo.png" alt="logo">
+          </a>
+        </div>
+        <div class="main-nav">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Product</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About Us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contact Us</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </nav>
+  </div>
+
+  <!-- Starting Carousel -->
+  <!-- Starting Carousel -->
+
+  <div class="container">
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <div class="row align-items-center">
+            <div class="col-md-6 col-left">
+              <h1>JBL Xtreme 2</h1>
+              <p>Portable Bluetooth Speaker, Powerful Sound and Deep Bass, IP67 Waterproof, 15 Hours of Playtime,
+                Powerbank, JBL PartyBoost for Multi-speaker Pairing (Black)
+              </p>
+              <a href="#" class="buy-now-button">BUY NOW</a>
+            </div>
+            <div class="col-md-6 bg-image">
+
+              <img src="images/banner-products/slider-3.png" class="d-block w-100" alt="img">
+            </div>
+          </div>
+
+        </div>
+        <div class="carousel-item">
+          <div class="row align-items-center">
+            <div class="col-md-6 col-left">
+              <h1>MacBook Pro</h1>
+              <p>Designed for those who defy limits and change the world, the 16-inch MacBook Pro is by far the most
+                powerful notebook we have ever made.</p>
+              <a href="#" class="buy-now-button">BUY NOW</a>
+            </div>
+            <div class="col-md-6 bg-image">
+              <img src="images/banner-products/product-1.png" class="d-block w-100" alt="...">
+            </div>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="row align-items-center">
+            <div class="col-md-6 col-left">
+              <h1>Apple Homepod</h1>
+              <p>Wall Mount Compatible Apple HomePod, ALLICAVER Sturdy Metal Made Mount Stand Holder Compatible Apple
+                HomePod.</p>
+              <a href="#" class="buy-now-button">BUY NOW</a>
+            </div>
+            <div class="col-md-6 bg-image">
+              <img src="images/banner-products/slider-1.png" class="d-block w-100" alt="...">
+            </div>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  </div>
+
+  <!-- start Image Card Group (((PHone))) -->
+  <!-- start Image Card Group (((PHone))) -->
+
+  <div class="container">
+    <h3>SmartPhone</h3>
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+      <div class="col">
+        <div class="card h-100">
+          <img src="images/phone/phone-2.png" class="card-img-top" alt="img">
+          <div class="card-body">
+            <h5 class="card-title d-flex justify-content-center">iPhone 11 Pro</h5>
+            <h5 class="d-flex justify-content-center">$999</h5>
+            <div class="d-flex justify-content-center">
+              <a href="#" class="buy-now-button">BUY NOW</a>
+            </div>
+
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="images/phone/phone-3.png" class="card-img-top" alt="img">
+          <div class="card-body">
+            <h5 class="card-title d-flex justify-content-center">Samsung Galaxy Note10+</h5>
+            <h5 class="d-flex justify-content-center">799$</h5>
+            <div class="d-flex justify-content-center">
+              <a href="#" class="buy-now-button">BUY NOW</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="images/phone/phone-1.png" class="card-img-top" alt="img">
+          <div class="card-body">
+            <h5 class="card-title d-flex justify-content-center">Redmi Note 7 Pro</h5>
+            <h5 class="d-flex justify-content-center"> 250$</h5>
+              <div class="d-flex justify-content-center">
+                <a href="#" class="buy-now-button">BUY NOW</a>
+              </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- start Image Card Group (((Laptop))) -->
+  <!-- start Image Card Group (((Laptop))) -->
+
+  
+  <div class="container">
+    <h3>Laptop</h3>
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+      <div class="col">
+        <div class="card h-100">
+          <img src="images/laptop/product-1.png" class="card-img-top" alt="img">
+          <div class="card-body">
+            <h5 class="card-title d-flex justify-content-center">Asus VivoBook</h5>
+            <h5 class="d-flex justify-content-center">$799</h5>
+            <div class="d-flex justify-content-center">
+              <a href="#" class="buy-now-button">BUY NOW</a>
+            </div>
+
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="images/laptop/product-2.png" class="card-img-top" alt="img">
+          <div class="card-body">
+            <h5 class="card-title d-flex justify-content-center">Razer Blade 15</h5>
+            <h5 class="d-flex justify-content-center">$2476</h5>
+            <div class="d-flex justify-content-center">
+              <a href="#" class="buy-now-button">BUY NOW</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="images/laptop/product-3.png" class="card-img-top" alt="img">
+          <div class="card-body">
+            <h5 class="card-title d-flex justify-content-center">Redmi Note 7 Pro</h5>
+            <h5 class="d-flex justify-content-center"> $699</h5>
+              <div class="d-flex justify-content-center">
+                <a href="#" class="buy-now-button">BUY NOW</a>
+              </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous">
+  </script>
 </body>
+
 </html>
