--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
   <!-- Start With Navbar -->
 
   <div class="container">
-    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-      <div class="container-fluid">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-info">
+      <div class="container-fluid d-flex justify-content-around">
         <div class="nav-image">
           <a class="navbar-brand" href="#">
-            <img src="images/logo.png" alt="logo">
+            <img class="logo" src="images/logo.png" alt="logo">
           </a>
         </div>
         <div class="main-nav">
@@ -115,7 +115,10 @@
   <!-- start Image Card Group (((PHone))) -->
 
   <div class="container">
-    <h3>SmartPhone</h3>
+      <div class="d-flex justify-content-between">
+        <h3>SmartPhone</h3>
+        <a class="see-all" href="">See All</a>
+      </div>
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <div class="card h-100">
@@ -162,7 +165,10 @@
 
   
   <div class="container">
-    <h3>Laptop</h3>
+      <div class="d-flex justify-content-between">
+          <h3>Laptop</h3>
+          <a class="see-all" href="">See All</a>
+      </div>
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <div class="card h-100">
