--- a/index.html
+++ b/index.html
@@ -199,13 +199,38 @@
         <div class="card h-100">
           <img src="images/laptop/product-3.png" class="card-img-top" alt="img">
           <div class="card-body">
-            <h5 class="card-title d-flex justify-content-center">Redmi Note 7 Pro</h5>
+            <h5 class="card-title d-flex justify-content-center">Xiaomi Mi Notebook Pro</h5>
             <h5 class="d-flex justify-content-center"> $699</h5>
               <div class="d-flex justify-content-center">
                 <a href="#" class="buy-now-button">BUY NOW</a>
               </div>
           </div>
         </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Last Categories -->
+  <!-- Last Categories -->
+
+  <div class="container">
+    <h3 class="d-flex justify-content-center">Categories</h3>
+    <div class="row ">
+      <div class="col-md-3">
+            <img class="" src="images/Categories/bag.png" alt="">
+
+          
+      </div>
+      <div class="col-md-3">
+        <div class="card" style="">
+          <img src="images/Categories/perfume.png" class="perfume" alt="...">
+          <div class="card-body">
+            <h5 class="card-title d-flex justify-content-center">Beauty</h5>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+
       </div>
     </div>
   </div>
