--- a/index.html
+++ b/index.html
@@ -214,23 +214,40 @@
   <!-- Last Categories -->
 
   <div class="container">
-    <h3 class="d-flex justify-content-center">Categories</h3>
-    <div class="row ">
-      <div class="col-md-3">
-            <img class="" src="images/Categories/bag.png" alt="">
-
-          
-      </div>
-      <div class="col-md-3">
-        <div class="card" style="">
-          <img src="images/Categories/perfume.png" class="perfume" alt="...">
-          <div class="card-body">
-            <h5 class="card-title d-flex justify-content-center">Beauty</h5>
+    <h3 class="d-flex justify-content-center categories">Categories</h3>
+    <div class="row">
+      <div class="col-md-3 d-flex justify-content-center align-items-center">
+        <div class="row">
+          <div class="card d-flex justify-content-center" style="">
+            <img src="images/Categories/bag.png" class="" alt="...">
+            <div class="card-body">
+              <h5 class="card-title d-flex justify-content-center">Bag</h5>
+            </div>
           </div>
         </div>
       </div>
-      <div class="col-md-6">
-
+      <div class="col-md-3">
+        <div class="row">
+          <div class="card d-flex align-items-center beauty" style="">
+            <img src="images/Categories/perfume.png" class="" alt="...">
+            <div class="card-body">
+              <h5 class="card-title d-flex justify-content-center">Beauty</h5>
+            </div>
+          </div>
+          <div class="card d-flex justify-content-center categories align-items-center" style="">
+            <img src="images/Categories/shoe.png" class="" alt="...">
+            <div class="card-body">
+              <h5 class="card-title d-flex justify-content-center">Shoe</h5>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6 ">
+        <div class="card pale-order" style="">
+          <img src="images/Categories/pale-order.png" class="" alt="...">
+          <div class="card-body">
+          </div>
+        </div>
       </div>
     </div>
   </div>
